# AI-News-Tracker

./: .gitignore  ACM班校友录_花名册_2002-2011.xlsx  Agent JD.xlsx  Agent人才匹配方法论.md  Boss2025-11-23-算法-筛选1.xlsx  COMPOUND_ENGINEERING_SETUP.md  DEVELOPMENT_GUIDELINES.md  GITHUB_HUNTER_GUIDE.md  GIT_WORKFLOW_GUIDE.md  MiniMax人员名单.csv  README_HEADHUNTER.md  ROADMAP.md  TWITTER_INTEGRATION_RESEARCH.md  Top20候选人_JD匹配分析.md  ai-tech-explorer-architecture.md  ai_news_tracker_implementation.md  analyze_lamda_author_api.py  analyze_lamda_from_website.py  analyze_lamda_papers_from_website.py  analyze_lamda_top_talents.py  api_server.py  app.py  batch_clean_all.py  caixukun_ppt_generator.py  classify_jd.py  clean_candidates.py  clean_wenxin.py  company_normalization_report.json  create_lamda_plan_structure.py  create_manual_analysis_guide.py  filter_candidates.py  generate_lamda_report.py  github_hunter_config.py  github_network_miner.py  github_seeds_s_aplus_a.csv  github_seeds_s_aplus_a.json  github_seeds_s_top5.json  listenhub_redesign.html  maimai-friends-fuben.xlsx  maimai_redesign.html  (+44 more)
candidate_data_cleaning/: README.md  pyproject.toml
candidate_data_cleaning/configs/: default.yaml
candidate_data_cleaning/data/outputs/: candidate_cleaned_20250926.xlsx  candidate_cleaning_report_20250926.json  candidate_issues_20250926.xlsx
candidate_data_cleaning/src/candidate_cleaner/: __init__.py  clean_cli.py  config.py  pipeline.py  transformers.py
candidate_data_cleaning/src/candidate_data_cleaning.egg-info/: SOURCES.txt  (+1 more)
candidate_data_cleaning/tests/: test_transformers.py
(+1557 files in other folders)
